gen/org/mule/lang/raml/parser/RamlParser.java
// This is a generated file. Not intended for manual editing.
package org.mule.lang.raml.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.mule.lang.raml.parser.psi.RamlTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class RamlParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ALPHA) {
      r = alpha(b, 0);
    }
    else if (t == ALPHADIGIT) {
      r = alphadigit(b, 0);
    }
    else if (t == ATTRIBUTE) {
      r = attribute(b, 0);
    }
    else if (t == COMPOSITE_TYPE) {
      r = composite_type(b, 0);
    }
    else if (t == DIGIT) {
      r = digit(b, 0);
    }
    else if (t == DIGITS) {
      r = digits(b, 0);
    }
    else if (t == DISCRETE_TYPE) {
      r = discrete_type(b, 0);
    }
    else if (t == DOMAINLABEL) {
      r = domainlabel(b, 0);
    }
    else if (t == END_OF_LINE) {
      r = end_of_line(b, 0);
    }
    else if (t == ESCAPE) {
      r = escape(b, 0);
    }
    else if (t == EXTENSION_TOKEN) {
      r = extension_token(b, 0);
    }
    else if (t == EXTRA) {
      r = extra(b, 0);
    }
    else if (t == GENERICURL) {
      r = genericurl(b, 0);
    }
    else if (t == HEX) {
      r = hex(b, 0);
    }
    else if (t == HIALPHA) {
      r = hialpha(b, 0);
    }
    else if (t == HOST) {
      r = host(b, 0);
    }
    else if (t == HOSTNAME) {
      r = hostname(b, 0);
    }
    else if (t == HOSTNUMBER) {
      r = hostnumber(b, 0);
    }
    else if (t == HOSTPORT) {
      r = hostport(b, 0);
    }
    else if (t == HPATH) {
      r = hpath(b, 0);
    }
    else if (t == HSEGMENT) {
      r = hsegment(b, 0);
    }
    else if (t == HTTPSURL) {
      r = httpsurl(b, 0);
    }
    else if (t == HTTPURL) {
      r = httpurl(b, 0);
    }
    else if (t == IANA_TOKEN) {
      r = iana_token(b, 0);
    }
    else if (t == IETF_TOKEN) {
      r = ietf_token(b, 0);
    }
    else if (t == IN_LINE_WHITESPACE) {
      r = in_line_whitespace(b, 0);
    }
    else if (t == INTEGER_NUMBER) {
      r = integer_number(b, 0);
    }
    else if (t == IP_SCHEMEPART) {
      r = ip_schemepart(b, 0);
    }
    else if (t == LOGIN) {
      r = login(b, 0);
    }
    else if (t == LOWALPHA) {
      r = lowalpha(b, 0);
    }
    else if (t == MIMETYPE) {
      r = mimetype(b, 0);
    }
    else if (t == NATIONAL) {
      r = national(b, 0);
    }
    else if (t == NON_WHITESPACE) {
      r = non_whitespace(b, 0);
    }
    else if (t == NON_WHITESPACE_WORD) {
      r = non_whitespace_word(b, 0);
    }
    else if (t == OTHERURL) {
      r = otherurl(b, 0);
    }
    else if (t == PARAMETER) {
      r = parameter(b, 0);
    }
    else if (t == PASSWORD) {
      r = password(b, 0);
    }
    else if (t == PORT) {
      r = port(b, 0);
    }
    else if (t == PUNCTUATION) {
      r = punctuation(b, 0);
    }
    else if (t == RAML_BASE_URI) {
      r = raml_base_uri(b, 0);
    }
    else if (t == RAML_COMMENT) {
      r = raml_comment(b, 0);
    }
    else if (t == RAML_CONTENT) {
      r = raml_content(b, 0);
    }
    else if (t == RAML_CONTENT_LIST) {
      r = raml_content_list(b, 0);
    }
    else if (t == RAML_DIRECTIVE) {
      r = raml_directive(b, 0);
    }
    else if (t == RAML_DIRECTIVE_LIST) {
      r = raml_directive_list(b, 0);
    }
    else if (t == RAML_DIRECTIVE_RAML) {
      r = raml_directive_raml(b, 0);
    }
    else if (t == RAML_DIRECTIVE_TAG) {
      r = raml_directive_tag(b, 0);
    }
    else if (t == RAML_DOCUMENT) {
      r = raml_document(b, 0);
    }
    else if (t == RAML_DOCUMENT_END) {
      r = raml_document_end(b, 0);
    }
    else if (t == RAML_DOCUMENT_LIST) {
      r = raml_document_list(b, 0);
    }
    else if (t == RAML_IRECTIVES_END) {
      r = raml_irectives_end(b, 0);
    }
    else if (t == RAML_MEDIA_TYPE) {
      r = raml_media_type(b, 0);
    }
    else if (t == RAML_RESOURCE) {
      r = raml_resource(b, 0);
    }
    else if (t == RAML_RESOURCE_TYPES) {
      r = raml_resource_types(b, 0);
    }
    else if (t == RAML_SCHEMAS) {
      r = raml_schemas(b, 0);
    }
    else if (t == RAML_SECURED_BY) {
      r = raml_secured_by(b, 0);
    }
    else if (t == RAML_SECURITY_SCHEMES) {
      r = raml_security_schemes(b, 0);
    }
    else if (t == RAML_STREAM) {
      r = raml_stream(b, 0);
    }
    else if (t == RAML_TAG_HANDLE) {
      r = raml_tag_handle(b, 0);
    }
    else if (t == RAML_TAG_PREFIX) {
      r = raml_tag_prefix(b, 0);
    }
    else if (t == RAML_TITLE) {
      r = raml_title(b, 0);
    }
    else if (t == RAML_TRAITS) {
      r = raml_traits(b, 0);
    }
    else if (t == RAML_VERSION) {
      r = raml_version(b, 0);
    }
    else if (t == RESERVED) {
      r = reserved(b, 0);
    }
    else if (t == SAFE) {
      r = safe(b, 0);
    }
    else if (t == SCHEME) {
      r = scheme(b, 0);
    }
    else if (t == SCHEMEPART) {
      r = schemepart(b, 0);
    }
    else if (t == SEARCH) {
      r = search(b, 0);
    }
    else if (t == SUBTYPE) {
      r = subtype(b, 0);
    }
    else if (t == TOKEN) {
      r = token(b, 0);
    }
    else if (t == TOPLABEL) {
      r = toplabel(b, 0);
    }
    else if (t == TSPECIALS) {
      r = tspecials(b, 0);
    }
    else if (t == TYPE) {
      r = type(b, 0);
    }
    else if (t == UCHAR) {
      r = uchar(b, 0);
    }
    else if (t == UNRESERVED) {
      r = unreserved(b, 0);
    }
    else if (t == URL) {
      r = url(b, 0);
    }
    else if (t == URLPATH) {
      r = urlpath(b, 0);
    }
    else if (t == USER) {
      r = user(b, 0);
    }
    else if (t == VALUE) {
      r = value(b, 0);
    }
    else if (t == X_TOKEN) {
      r = x_token(b, 0);
    }
    else if (t == XCHAR) {
      r = xchar(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return whitespace(b, l + 1);
  }

  /* ********************************************************** */
  // lowalpha | hialpha
  public static boolean alpha(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alpha")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<alpha>");
    r = lowalpha(b, l + 1);
    if (!r) r = hialpha(b, l + 1);
    exit_section_(b, l, m, ALPHA, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // alpha | digit
  public static boolean alphadigit(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alphadigit")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<alphadigit>");
    r = alpha(b, l + 1);
    if (!r) r = digit(b, l + 1);
    exit_section_(b, l, m, ALPHADIGIT, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // token
  public static boolean attribute(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<attribute>");
    r = token(b, l + 1);
    exit_section_(b, l, m, ATTRIBUTE, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // "message" | "multipart" | extension_token
  public static boolean composite_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "composite_type")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<composite type>");
    r = consumeToken(b, "message");
    if (!r) r = consumeToken(b, "multipart");
    if (!r) r = extension_token(b, l + 1);
    exit_section_(b, l, m, COMPOSITE_TYPE, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
  public static boolean digit(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "digit")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<digit>");
    r = consumeToken(b, "0");
    if (!r) r = consumeToken(b, "1");
    if (!r) r = consumeToken(b, "2");
    if (!r) r = consumeToken(b, "3");
    if (!r) r = consumeToken(b, "4");
    if (!r) r = consumeToken(b, "5");
    if (!r) r = consumeToken(b, "6");
    if (!r) r = consumeToken(b, "7");
    if (!r) r = consumeToken(b, "8");
    if (!r) r = consumeToken(b, "9");
    exit_section_(b, l, m, DIGIT, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 1*digit
  public static boolean digits(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "digits")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<digits>");
    r = digits_0(b, l + 1);
    r = r && digit(b, l + 1);
    exit_section_(b, l, m, DIGITS, r, false, null);
    return r;
  }

  // 1*
  private static boolean digits_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "digits_0")) return false;
    int c = current_position_(b);
    while (true) {
      if (!consumeToken(b, "1")) break;
      if (!empty_element_parsed_guard_(b, "digits_0", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // "text" | "image" | "audio" | "video" |
  //               "application" | extension_token
  public static boolean discrete_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "discrete_type")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<discrete type>");
    r = consumeToken(b, "text");
    if (!r) r = consumeToken(b, "image");
    if (!r) r = consumeToken(b, "audio");
    if (!r) r = consumeToken(b, "video");
    if (!r) r = consumeToken(b, "application");
    if (!r) r = extension_token(b, l + 1);
    exit_section_(b, l, m, DISCRETE_TYPE, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // alphadigit | alphadigit *[ alphadigit | "-" ] alphadigit
  public static boolean domainlabel(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "domainlabel")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<domainlabel>");
    r = alphadigit(b, l + 1);
    if (!r) r = domainlabel_1(b, l + 1);
    exit_section_(b, l, m, DOMAINLABEL, r, false, null);
    return r;
  }

  // alphadigit *[ alphadigit | "-" ] alphadigit
  private static boolean domainlabel_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "domainlabel_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = domainlabel_1_0(b, l + 1);
    r = r && domainlabel_1_1(b, l + 1);
    r = r && alphadigit(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // alphadigit *
  private static boolean domainlabel_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "domainlabel_1_0")) return false;
    int c = current_position_(b);
    while (true) {
      if (!alphadigit(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "domainlabel_1_0", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // [ alphadigit | "-" ]
  private static boolean domainlabel_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "domainlabel_1_1")) return false;
    domainlabel_1_1_0(b, l + 1);
    return true;
  }

  // alphadigit | "-"
  private static boolean domainlabel_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "domainlabel_1_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = alphadigit(b, l + 1);
    if (!r) r = consumeToken(b, "-");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // "\r\n" | "\r" | "\n"
  public static boolean end_of_line(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "end_of_line")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<end of line>");
    r = consumeToken(b, "\r\n");
    if (!r) r = consumeToken(b, "\r");
    if (!r) r = consumeToken(b, "\n");
    exit_section_(b, l, m, END_OF_LINE, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // "%" hex hex
  public static boolean escape(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "escape")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<escape>");
    r = consumeToken(b, "%");
    r = r && hex(b, l + 1);
    r = r && hex(b, l + 1);
    exit_section_(b, l, m, ESCAPE, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ietf_token | x_token
  public static boolean extension_token(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "extension_token")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<extension token>");
    r = ietf_token(b, l + 1);
    if (!r) r = x_token(b, l + 1);
    exit_section_(b, l, m, EXTENSION_TOKEN, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // "!" | "*" | "'" | "(" | ")" | ","
  public static boolean extra(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "extra")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<extra>");
    r = consumeToken(b, "!");
    if (!r) r = consumeToken(b, "*");
    if (!r) r = consumeToken(b, "'");
    if (!r) r = consumeToken(b, "(");
    if (!r) r = consumeToken(b, ")");
    if (!r) r = consumeToken(b, ",");
    exit_section_(b, l, m, EXTRA, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // scheme ":" schemepart
  public static boolean genericurl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "genericurl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<genericurl>");
    r = scheme(b, l + 1);
    r = r && consumeToken(b, ":");
    r = r && schemepart(b, l + 1);
    exit_section_(b, l, m, GENERICURL, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // digit | "A" | "B" | "C" | "D" | "E" | "F" |
  //                  "a" | "b" | "c" | "d" | "e" | "f"
  public static boolean hex(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "hex")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<hex>");
    r = digit(b, l + 1);
    if (!r) r = consumeToken(b, "A");
    if (!r) r = consumeToken(b, "B");
    if (!r) r = consumeToken(b, "C");
    if (!r) r = consumeToken(b, "D");
    if (!r) r = consumeToken(b, "E");
    if (!r) r = consumeToken(b, "F");
    if (!r) r = consumeToken(b, "a");
    if (!r) r = consumeToken(b, "b");
    if (!r) r = consumeToken(b, "c");
    if (!r) r = consumeToken(b, "d");
    if (!r) r = consumeToken(b, "e");
    if (!r) r = consumeToken(b, "f");
    exit_section_(b, l, m, HEX, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" |
  //                  "J" | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" |
  //                  "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z"
  public static boolean hialpha(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "hialpha")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<hialpha>");
    r = consumeToken(b, "A");
    if (!r) r = consumeToken(b, "B");
    if (!r) r = consumeToken(b, "C");
    if (!r) r = consumeToken(b, "D");
    if (!r) r = consumeToken(b, "E");
    if (!r) r = consumeToken(b, "F");
    if (!r) r = consumeToken(b, "G");
    if (!r) r = consumeToken(b, "H");
    if (!r) r = consumeToken(b, "I");
    if (!r) r = consumeToken(b, "J");
    if (!r) r = consumeToken(b, "K");
    if (!r) r = consumeToken(b, "L");
    if (!r) r = consumeToken(b, "M");
    if (!r) r = consumeToken(b, "N");
    if (!r) r = consumeToken(b, "O");
    if (!r) r = consumeToken(b, "P");
    if (!r) r = consumeToken(b, "Q");
    if (!r) r = consumeToken(b, "R");
    if (!r) r = consumeToken(b, "S");
    if (!r) r = consumeToken(b, "T");
    if (!r) r = consumeToken(b, "U");
    if (!r) r = consumeToken(b, "V");
    if (!r) r = consumeToken(b, "W");
    if (!r) r = consumeToken(b, "X");
    if (!r) r = consumeToken(b, "Y");
    if (!r) r = consumeToken(b, "Z");
    exit_section_(b, l, m, HIALPHA, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // hostname | hostnumber
  public static boolean host(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "host")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<host>");
    r = hostname(b, l + 1);
    if (!r) r = hostnumber(b, l + 1);
    exit_section_(b, l, m, HOST, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // *
  public static boolean hostname(PsiBuilder b, int l) {
    Marker m = enter_section_(b);
    exit_section_(b, m, HOSTNAME, true);
    return true;
  }

  /* ********************************************************** */
  // digits "." digits "." digits "." digits
  public static boolean hostnumber(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "hostnumber")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<hostnumber>");
    r = digits(b, l + 1);
    r = r && consumeToken(b, ".");
    r = r && digits(b, l + 1);
    r = r && consumeToken(b, ".");
    r = r && digits(b, l + 1);
    r = r && consumeToken(b, ".");
    r = r && digits(b, l + 1);
    exit_section_(b, l, m, HOSTNUMBER, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // host [ ":" port ]
  public static boolean hostport(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "hostport")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<hostport>");
    r = host(b, l + 1);
    r = r && hostport_1(b, l + 1);
    exit_section_(b, l, m, HOSTPORT, r, false, null);
    return r;
  }

  // [ ":" port ]
  private static boolean hostport_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "hostport_1")) return false;
    hostport_1_0(b, l + 1);
    return true;
  }

  // ":" port
  private static boolean hostport_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "hostport_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ":");
    r = r && port(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // hsegment *[ "/" hsegment ]
  public static boolean hpath(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "hpath")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<hpath>");
    r = hpath_0(b, l + 1);
    r = r && hpath_1(b, l + 1);
    exit_section_(b, l, m, HPATH, r, false, null);
    return r;
  }

  // hsegment *
  private static boolean hpath_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "hpath_0")) return false;
    int c = current_position_(b);
    while (true) {
      if (!hsegment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "hpath_0", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // [ "/" hsegment ]
  private static boolean hpath_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "hpath_1")) return false;
    hpath_1_0(b, l + 1);
    return true;
  }

  // "/" hsegment
  private static boolean hpath_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "hpath_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "/");
    r = r && hsegment(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // *
  public static boolean hsegment(PsiBuilder b, int l) {
    Marker m = enter_section_(b);
    exit_section_(b, m, HSEGMENT, true);
    return true;
  }

  /* ********************************************************** */
  // "https://" hostport [ "/" hpath [ "?" search ]]
  public static boolean httpsurl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "httpsurl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<httpsurl>");
    r = consumeToken(b, "https://");
    r = r && hostport(b, l + 1);
    r = r && httpsurl_2(b, l + 1);
    exit_section_(b, l, m, HTTPSURL, r, false, null);
    return r;
  }

  // [ "/" hpath [ "?" search ]]
  private static boolean httpsurl_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "httpsurl_2")) return false;
    httpsurl_2_0(b, l + 1);
    return true;
  }

  // "/" hpath [ "?" search ]
  private static boolean httpsurl_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "httpsurl_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "/");
    r = r && hpath(b, l + 1);
    r = r && httpsurl_2_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [ "?" search ]
  private static boolean httpsurl_2_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "httpsurl_2_0_2")) return false;
    httpsurl_2_0_2_0(b, l + 1);
    return true;
  }

  // "?" search
  private static boolean httpsurl_2_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "httpsurl_2_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "?");
    r = r && search(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // "http://" hostport [ "/" hpath [ "?" search ]]
  public static boolean httpurl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "httpurl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<httpurl>");
    r = consumeToken(b, "http://");
    r = r && hostport(b, l + 1);
    r = r && httpurl_2(b, l + 1);
    exit_section_(b, l, m, HTTPURL, r, false, null);
    return r;
  }

  // [ "/" hpath [ "?" search ]]
  private static boolean httpurl_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "httpurl_2")) return false;
    httpurl_2_0(b, l + 1);
    return true;
  }

  // "/" hpath [ "?" search ]
  private static boolean httpurl_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "httpurl_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "/");
    r = r && hpath(b, l + 1);
    r = r && httpurl_2_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [ "?" search ]
  private static boolean httpurl_2_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "httpurl_2_0_2")) return false;
    httpurl_2_0_2_0(b, l + 1);
    return true;
  }

  // "?" search
  private static boolean httpurl_2_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "httpurl_2_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "?");
    r = r && search(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // token
  public static boolean iana_token(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "iana_token")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<iana token>");
    r = token(b, l + 1);
    exit_section_(b, l, m, IANA_TOKEN, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // token
  public static boolean ietf_token(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ietf_token")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<ietf token>");
    r = token(b, l + 1);
    exit_section_(b, l, m, IETF_TOKEN, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // whitespace | whitespace in_line_whitespace
  public static boolean in_line_whitespace(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "in_line_whitespace")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<in line whitespace>");
    r = whitespace(b, l + 1);
    if (!r) r = in_line_whitespace_1(b, l + 1);
    exit_section_(b, l, m, IN_LINE_WHITESPACE, r, false, null);
    return r;
  }

  // whitespace in_line_whitespace
  private static boolean in_line_whitespace_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "in_line_whitespace_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = whitespace(b, l + 1);
    r = r && in_line_whitespace(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }
